config-and-policy/namespaces/payments/front-end/front-end.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: front-end
  labels:
    k8s-namespace: front-end
