config-and-policy/namespaces/payments/front-end/payments-front.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments-front
  labels:
    k8s-namespace: payments-front
